infra/terraform/compute-dev/bastion.tf
resource "aws_instance" "bastion" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t3.micro"
  subnet_id                   = local.public_subnet_ids[0]
  associate_public_ip_address = true
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.bastion.id]

  tags = merge(local.common_tags, { Name = "${local.name}-bastion" })
}
